--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,27 @@
 
 	
 	<target name="zipf" depends="jarfile,clean">
-		<zip destfile="alerts.zip" basedir="." excludes=".settings, dist, bin, .classpath, .project, build.xml, alerts.zip" />
+		<zip destfile="alerts.zip">
+			<fileset file="caps.jar"/>
+			<zipfileset dir="bin" prefix="bin"/>
+			<zipfileset dir="cache" prefix="cache" />
+		    <zipfileset dir="logs" prefix="logs"/>
+		    <zipfileset dir="candidateHazards" prefix="candidateHazards"/>
+			<zipfileset dir="lib" prefix="lib">
+		 	 <include name="commons-collections-3.2.1.jar"/>
+			 <include name="commons-configuration-1.9.jar"/>
+			 <include name="commons-lang-2.5.jar"/>
+			 <include name="commons-logging-1.1.3.jar"/>
+			 <include name="concurrent-1.3.4.jar"/>
+			 <include name="ehcache-ee-2.7.3.jar"/>
+			 <include name="jdom-1.1.3.jar"/>
+	         <include name="log4j-1.2.17.jar"/>
+	         <include name="rome-1.0.jar"/>
+			 <include name="slf4j-api-1.7.5.jar"/>
+			 <include name="slf4j-log4j12-1.7.5.jar"/>
+			</zipfileset>
+			<zipfileset dir="src" prefix="src" />
+		</zip>
 	</target>
 	
 	<target name="clean">
@@ -39,7 +59,17 @@
 		
 		 <path id="libraries">
 		 	<fileset dir="lib">
-		 	 <include name="**/*.jar"/>
+		 	 <include name="commons-collections-3.2.1.jar"/>
+			 <include name="commons-configuration-1.9.jar"/>
+			 <include name="commons-lang-2.5.jar"/>
+			 <include name="commons-logging-1.1.3.jar"/>
+			 <include name="concurrent-1.3.4.jar"/>
+			 <include name="ehcache-ee-2.7.3.jar"/>
+			 <include name="jdom-1.1.3.jar"/>
+	         <include name="log4j-1.2.17.jar"/>
+	         <include name="rome-1.0.jar"/>
+			 <include name="slf4j-api-1.7.5.jar"/>
+			 <include name="slf4j-log4j12-1.7.5.jar"/>
 		 	</fileset>
 		  </path>
 	     <property name="classpath" refid="libraries" />
